<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">名师讲堂</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription">contentDescription</string>
    <string name="hello_world">Hello world!</string>
    <string name="recentWatch">最近观看</string>
    <string name="collectTxt">收藏</string>
    <string name="searchTxt">搜索</string>
    <string name="downLoadManager">下载管理</string>
    <string name="recommendVideo">推荐视频</string>

    <string name="allSubject">所有</string>
    <string name="homeBtn">主页</string>
    <string name="yuWenBtn">语文</string>
    <string name="shuXueBtn">数学</string>
    <string name="yingYuBtn">英语</string>
    <string name="wuLiBtn">物理</string>
    <string name="huaXueBtn">化学</string>
    <string name="shengWuBtn">生物</string>
    <string name="diLiBtn">地理</string>
    <string name="liShiBtn">历史</string>
    <string name="zhengZhiBtn">政治</string>
    <string name="qiTaBtn">其他</string>

    <string name="curPlay">最近播放</string>
    <string name="deleteAll">删除全部</string>
    <string name="sureExitApp">再按一次，退出应用</string>

    <string name="xieGan">/</string>
    <string name="tempTitle">      </string>
    <string name="delectAllFile">是否删除该目录下所有文件</string>
    <string name="cancelBtnTxt">取消</string>
    <string name="sureBtnTxt">确定</string>
    <string name="hasDownLoad">已下载</string>
    <string name="downLoading">正在下载</string>

    <string name="version_name">1.0</string>
    <string name="title_file">本地视频</string>
    <string name="title_online">在线视频</string>
    <string name="init_decoders">正在进行第一次解压解码包&#8230;</string>
    <string name="decoerserror">解压解码包出错，无法播放！</string>
    <string name="loadinfo">载入中，请稍后&#8230;</string>
    <string name="file_oper">文件操作</string>
    <string name="file_rename">重命名</string>
    <string name="file_rename_failed">重命名失败</string>
    <string name="file_rename_exists">文件已存在</string>
    <string name="file_delete">删除</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="video_layout_loading">正在缓冲&#8230;</string>
    <string name="video_layout_title">正在播放:</string>
    <string name="video_list_item_teacher">讲师：</string>
    <string name="video_list_coursetitle">课程列表</string>
    <string name="video_list_nocourse">沒有相关课程列表</string>
    <string name="video_gisttitle">本课要点</string>
    <string name="video_nogist">本课未设置要点</string>
    <string name="video_search_hint">请输入关键字</string>
    <string name="video_list_add_collect">该视频已加入收藏夹</string>
    <string name="video_list_add_download">该视频已加入下载队列</string>
    
    <string name="video_search_hot">热门搜索</string>
    <string name="video_search_history">搜索历史</string>
    <string name="video_search_clear">清空历史</string>
    
    <string name="video_search_result_all">全部</string>
    <string name="video_search_result_videoset">视频集</string>
    <string name="video_search_result_video">视频</string>
    <string name="video_search_result_teacher">讲师</string>
    <string name="video_search_result_intro">课程简介</string>
    <string name="video_search_result_order">排序：</string>
    <string name="video_search_result_order_default">默认</string>
    <string name="video_search_result_order_favorable">好评度</string>
    
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放。</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    
    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>
</resources>
