<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/alert_bg"
    >
    
    <TextView 
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delectAllFile"
        android:layout_gravity="center_horizontal"
        />
    
    <LinearLayout 
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        
        >
        
        <Button 
            android:id="@+id/cancelBtn"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelBtnTxt"
            android:background="@drawable/alert_dialog_btn_bg"
            />

        <Button 
            android:id="@+id/sureBtn"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sureBtnTxt"
            android:background="@drawable/alert_dialog_btn_bg"
            />
        
    </LinearLayout>

</LinearLayout>
